--- a/dublin.scss
+++ b/dublin.scss
@@ -48,6 +48,7 @@ body.home {
 /* Entry Widths*/
 header.entry-header,
 footer.entry-footer,
+.entry-content,
 .entry-content p,
 .entry-content h1,
 .entry-content h2,
