--- a/dublin.css
+++ b/dublin.css
@@ -97,7 +97,8 @@ pre.wp-block-verse,
 .entry-content ol,
 .entry-content ul,
 .entry-content dl {
-  margin-left: 1rem; }
+  margin: 1rem auto;
+  padding-left: 1rem; }
 
 table.tix_tickets_table {
   width: 100%;
