--- a/dublin.scss
+++ b/dublin.scss
@@ -131,7 +131,8 @@ pre.wp-block-verse,
 .entry-content ol,
 .entry-content ul,
 .entry-content dl {
-	margin-left: 1rem;
+	margin: 1rem auto;
+	padding-left: 1rem;
 }
 
 // Tickets Table
