--- a/dublin.scss
+++ b/dublin.scss
@@ -136,6 +136,10 @@ pre.wp-block-verse,
 	padding-left: 2rem;
 }
 
+.youtube-player {
+	margin: auto;
+}
+
 // Tickets Table
 
 table.tix_tickets_table {
