--- a/dublin.css
+++ b/dublin.css
@@ -49,7 +49,9 @@ pre.wp-block-verse,
 .testimonial,
 .wp-block-table,
 .googlemaps,
-[id^=contact-form-] {
+[id^=contact-form-],
+#comments,
+.navigation.post-navigation {
   width: 100%;
   max-width: 72rem;
   margin: 1rem auto;
