--- a/dublin.scss
+++ b/dublin.scss
@@ -82,6 +82,15 @@ pre.wp-block-verse,
 	padding: 0 1rem;
 }
 
+
+.wp-block-embed {
+	margin: 1rem auto 2rem auto;
+}
+
+iframe {
+	margin: 0 auto;
+}
+
 .aligncenter {
 	margin: 0 auto;
 }
