Add max-width and margin auto to the tickets' table

--- a/dublin.scss
+++ b/dublin.scss
@@ -74,7 +74,8 @@ pre.wp-block-verse,
 .googlemaps,
 [id^=contact-form-],
 #comments,
-.navigation.post-navigation {
+.navigation.post-navigation,
+.tix-js {
 	width: 100%;
 	max-width: 72rem;
 	margin: 1rem auto;
