--- a/dublin.css
+++ b/dublin.css
@@ -357,6 +357,14 @@ body.page-template-full-width #secondary {
     left: 0;
     z-index: 5;
     color: #fff; }
+    header#masthead .site-branding .site-title,
+    header#masthead .site-branding .site-description {
+      width: 50%;
+      display: inline-block; }
+    header#masthead .site-branding .site-title {
+      text-align: left; }
+    header#masthead .site-branding .site-description {
+      text-align: right; }
     header#masthead .custom-header {
       width: 100%;
       max-wdth: 75rem;
