--- a/dublin.scss
+++ b/dublin.scss
@@ -749,3 +749,7 @@ body.page-template-full-width #secondary {
 	}
 
 }
+
+
+/* Import all component styles */
+@import "scss/components/components";
