--- a/dublin.scss
+++ b/dublin.scss
@@ -75,7 +75,8 @@ pre.wp-block-verse,
 [id^=contact-form-],
 #comments,
 .navigation.post-navigation,
-#tix {
+#tix,
+a.more-link {
 	width: 100%;
 	max-width: 72rem;
 	margin: 1rem auto;
