--- a/dublin.scss
+++ b/dublin.scss
@@ -76,7 +76,7 @@ pre.wp-block-verse,
 #comments,
 .navigation.post-navigation,
 #tix,
-a.more-link {
+.entry-content a.more-link {
 	width: 100%;
 	max-width: 72rem;
 	margin: 1rem auto;
