--- a/dublin.css
+++ b/dublin.css
@@ -53,7 +53,7 @@ pre.wp-block-verse,
 #comments,
 .navigation.post-navigation,
 #tix,
-a.more-link {
+.entry-content a.more-link {
   width: 100%;
   max-width: 72rem;
   margin: 1rem auto;
