Hide remaining ticket count from the ticket page

--- a/dublin.css
+++ b/dublin.css
@@ -145,6 +145,10 @@ table.tix-attendee-form td.tix-right {
 table.tix-attendee-form th {
   font-weight: 700; }
 
+.tix-column-remaining {
+  display: none;
+}
+
 p.no-comments {
   display: none; }
 
