--- a/dublin.scss
+++ b/dublin.scss
@@ -199,6 +199,9 @@ table.tix-attendee-form th {
 	font-weight: 700;
 }
 
+.tix-column-remaining {
+	display: none;
+}
 
 p.no-comments {
 	display: none;
