--- a/scss/components/_subscribe_news.scss
+++ b/scss/components/_subscribe_news.scss
@@ -6,3 +6,13 @@
   }
 }
 
+@media screen and (min-width: 64rem) {
+	.wp-block-jetpack-subscriptions {
+		width: 50%;
+		padding: 1.5rem;
+		margin: 1.5rem auto;
+		border: 1px solid #ddd;
+		border-radius: .5rem;
+		text-align: center;
+	}
+}
