fixing dublin.scss file

--- a/dublin.scss
+++ b/dublin.scss
@@ -546,7 +546,7 @@ body.page-template-full-width #secondary {
 
 		.custom-header {
 			width: 100%;
-			max-wdth: 75rem;
+			max-width: 75rem;
 			margin: 0 auto;
 		}
 
@@ -630,7 +630,7 @@ body.page-template-full-width #secondary {
 		.sponsor-level.wood a.sponsor-logo,
 		.sponsor-level.cardboard a.sponsor-logo,
 		.sponsor-level.paper a.sponsor-logo,
-		.sponsor-level.tissue a.sponsor-logo, {
+		.sponsor-level.tissue a.sponsor-logo {
 			display: inline-block;
 			padding: 0 1rem;
 		}
@@ -642,7 +642,7 @@ body.page-template-full-width #secondary {
 		.sponsor-level.wood a.sponsor-logo img,
 		.sponsor-level.cardboard a.sponsor-logo img,
 		.sponsor-level.paper a.sponsor-logo img,
-		.sponsor-level.tissue a.sponsor-logo img, {
+		.sponsor-level.tissue a.sponsor-logo img {
 			padding: .5rem .5rem;
 		}
 
