--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -8,3 +8,6 @@ $medBlue:	#163180;		//  rgb(22,49,128)
 $darkBlue: #1d0a69;		//	rgb(29,10,105)
 $darkPurple: #6E1799;		//	rgb(61,4,102)
 $brightPurple: #9C0076;		//	rgb(100,24,154)
+$white: #fff;
+
+$primaryColour: $medBlue;
