--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -4,10 +4,14 @@ $headingFont: 'Open Sans', sans-serif;
 
 // Colours
 $lightBlue:	#97cade;		//	rgb(151,202,222)
-$medBlue:	#163180;		//  rgb(22,49,128)
+$medBlue:	#1d5cb5;		//  rgb(22,49,128)
 $darkBlue: #1d0a69;		//	rgb(29,10,105)
 $darkPurple: #6E1799;		//	rgb(61,4,102)
 $brightPurple: #9C0076;		//	rgb(100,24,154)
 $white: #fff;
 
+$textColour: #2c3039;
+$backgroudColour: #f9f9f9;
+
 $primaryColour: $medBlue;
+$secondaryColour: $white;
