--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -3,7 +3,7 @@ body {
 	background: $backgroudColour;
 	word-wrap: break-word;
 	color: $textColour;
-	
+
 	h1,
 	h2,
 	h3,
@@ -20,6 +20,34 @@ body {
 .entry-summary {
 	max-width: 72rem;
 	margin: 1rem auto 2rem auto;
+}
+
+.aligncenter {
+	margin: 0 auto;
+}
+
+.alignwide {
+	margin: 0 auto 2rem auto;
+	padding: 0 1rem;
+}
+
+.alignfull {
+	min-width: 100%;
+	margin: 0 0 2rem 0;
+}
+
+.entry-content {
+  .alignwide {
+    margin-left  : -80px;
+    margin-right : -80px;
+  }
+
+  .alignfull {
+    margin-left  : calc( -100vw / 2 + 100% / 2 );
+    margin-right : calc( -100vw / 2 + 100% / 2 );
+    max-width    : 100vw;
+    width: 100vw;
+  }
 }
 
 .entry .entry-content,
@@ -82,42 +110,18 @@ iframe {
 	margin: 0 auto;
 }
 
-.aligncenter {
-	margin: 0 auto;
-}
-
 .wp-block-columns .wp-block-column p {
 	padding: 0.75rem;
 }
 
-.alignwide {
-	max-width: 72rem !important;
-	margin: 0 auto 2rem auto;
-	padding: 0 1rem;
-}
-
-.alignfull {
-	min-width: 100%;
-	margin: 0 0 2rem 0;
-}
-
-.wp-block-cover.alignfull {
-	width: 100%;
-	margin: 0 0 2rem 0;
-	padding: 0;
-	background-size: cover;
-	max-width: 100%;
-	max-height: 100%;
-}
-
 .wp-block-cover-image,
 .wp-block-cover {
-	min-height: 15rem;
+  min-height: 15rem;
 }
 
 .wp-block-button {
 	margin: 1rem auto;
-	
+
 	&.alignright {
 		width: 100%;
 		max-width: 72rem;
@@ -149,7 +153,8 @@ p.no-comments {
 
 @media screen and (min-width: 64rem) {
   body.home .wp-block-cover {
-		min-height: 360px;
+    min-height: 460px;
+    background-color: transparent;
 	}
 
 	body.home .wp-block-cover__inner-container {
