--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,47 +1,59 @@
 header#masthead {
 	background: $primaryColour;
-	display: block;
-	position: relative;
+	display: flex;
+	position: sticky;
 	top: 0;
 	right: 0;
 	left: 0;
 	z-index: 5;
-	color: $white;
+  color: $white;
+  padding: 0 4rem;
 
 	.site-branding {
-		width: 100%;
-		max-width: 75rem;
-		margin: 0 auto;
+    text-align: left;
 		position: relative;
-		padding: .5rem 0 0rem 0;
+		padding: 1.5em 0 0;
 
 		.site-title {
-			width: 100%;
 			color: $white;
-			top: 0;
-			text-align: center;
-			text-decoration: none;
-			font-size: 1rem;
-			font-weight: 600;
-			margin: 0 auto;
+			font-size: 2rem;
+      margin: 0 auto;
+      padding: 0;
 
 			a {
+        text-decoration: none;
 				color: $white;
 			}
 		}
 
-		p.site-description {
-			width: 100%;
-			text-align: center;
-			margin: 0 auto;
-			font-size: .9rem;
-			font-weight: 600;
-
+		.site-description {
+			display: none;
 		}
-	}
+  }
+
+  .menu-menu-container {
+    max-width: 100%;
+    margin: 0 auto;
+    text-align: right;
+  }
+
+  .custom-header {
+    height: 100%;
+    max-width: 100%;
+  }
+
 }
 
 @media screen and (max-width: 63.99rem) {
+  header#masthead {
+    padding: 0 1em;
+    display: block;
+
+    .site-branding {
+      text-align: center;
+    }
+  }
+
 	.page-navigation-container {
 		font-family: $headingFont;
 
@@ -51,11 +63,12 @@ header#masthead {
 			width: 100%;
 			border: none;
 			border-top: 3px solid $lightBlue;
-			border-bottom: 3px solid $lightBlue;
-			background: rgba( 0,0,0,0);
+      border-bottom: 3px solid $lightBlue;
+      border-radius: 0;
+			background: transparent;
 			color: $white;
-			font-size: .9rem;
-			font-weight: 600;
+			font-size: 1.2rem;
+			font-weight: 700;
 		}
 
 		ul {
@@ -67,7 +80,6 @@ header#masthead {
 			float: none;
 			text-align: left;
 			position: relative;
-			padding: .5rem 0;
 
 			button.dropdown-toggle {
 				display: none;
@@ -75,14 +87,14 @@ header#masthead {
 
 			a {
 				display: block;
-				width: 100%;
-				margin: 0 auto;
 				color: $lightBlue;
-				padding-left: 1rem;
+        padding: 1rem;
+        width: 100%;
 
-				&:hover {
+        &:hover,
+        &:active {
 					color: $white;
-					background: $darkPurple;
+					background: $lightBlue;
 				}
 			}
 
@@ -117,7 +129,7 @@ header#masthead {
 	.js .menu-toggle,
 	.js .dropdown-toggle {
 		display: block;
-	}
+  }
 }
 
 @media screen and (min-width: 64rem) {
@@ -140,13 +152,13 @@ header#masthead {
 			a:focus,
 			a:active,
 			a:focus-within {
-				background: $darkPurple;
+				background: $lightBlue;
 				color: $white;
 			}
 		}
 
 		li:hover > a {
-			background: $darkPurple;
+			background: $lightBlue;
 			color: $white;
 		}
 
@@ -167,7 +179,7 @@ header#masthead {
 
 				a:hover {
 					color: $white;
-					background: $darkPurple;
+					background: $lightBlue;
 				}
 
 				ul.sub-menu {
@@ -176,40 +188,14 @@ header#masthead {
 			}
 		}
   }
-  
+
   header#masthead {
-		background: $primaryColour;
-		display: block;
-		position: sticky;
-		top: 0;
-		right: 0;
-		left: 0;
-		z-index: 5;
-		color: $white;
-
-		.site-branding {
-			display: flex;
-		}
-
-		.site-branding p.site-title,
-		.site-branding p.site-description {
-			width: 50%;
-			display: inline-block;
-		}
-
 		.site-branding p.site-title {
 			text-align: left;
 		}
 
 		.site-branding p.site-description {
 			text-align: right;
-		}
-
-
-		.custom-header {
-			width: 100%;
-			max-width: 75rem;
-			margin: 0 auto;
 		}
 
 		#site-navigation {
@@ -222,22 +208,24 @@ header#masthead {
 			z-index: 4;
 			background: rgba(29,10,105,0);
 
-			ul#primary-menu {
+			#primary-menu {
 				margin: 0 auto;
 				display: inline-flex;
 				text-align: left;
 
 				li {
-					padding: .5rem 0 0 0;
-					margin: .25rem 0 0 0;
+					padding: 0;
 					text-transform: uppercase;
 					font-weight: 700;
+					display: flex;
+					align-items: center;
 				}
 
 				a {
 					color: $white;
-					padding: 1rem .5rem .5rem .5rem;
-					margin: 0 .5rem 0 .5rem;
+					padding: 2rem 1.2rem;
+					height: 90px;
+          font-size: 1.2rem;
 				}
 
 				a:focus,
@@ -245,20 +233,26 @@ header#masthead {
 				a:active,
 				a:hover {
 					background: $lightBlue;
-				}
+        }
+
+
+        .current-menu-item a {
+          background: $lightBlue;
+        }
 
 				ul.sub-menu {
 					background: $primaryColour;
-					margin: 2rem 0 0 0;
+					margin: 4rem 0 0 0;
 
 					li {
             margin: 0;
-            padding: 0;s
+            padding: 0;
 
 						a {
-							padding: .75rem .25rem .75rem 1rem;
+							padding: 1rem;
               min-width: 260px;
-              margin: 0 0;
+							margin: 0 0;
+							height: auto;
 						}
 					}
 
