--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,5 +1,7 @@
-footer#colophon.site-footer {
-	background: #f2f2f2;
+.site-footer {
+	background: $lightBlue;
+  padding: 1em;
+  margin-top: 4em;
 
 	#footer-widgets {
 		width: 100%;
@@ -9,7 +11,16 @@ footer#colophon.site-footer {
 		.wcb_widget_sponsors {
 			text-align: center;
 		}
-	}
+  }
+
+  a {
+    color: $primaryColour;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 @media screen and (min-width: 64rem) {
