adding style to the news page

--- a/src/scss/dublin.scss
+++ b/src/scss/dublin.scss
@@ -6,6 +6,7 @@
 @import "./speakers";
 @import "./header";
 @import "./footer";
+@import "./blog";
 
 /* Import all component styles */
 @import "./components/components";
