--- a/src/scss/dublin.scss
+++ b/src/scss/dublin.scss
@@ -7,6 +7,7 @@
 @import "./header";
 @import "./footer";
 @import "./blog";
+@import "./singular";
 
 /* Import all component styles */
 @import "./components/components";
