adding sidebar spacing style

--- a/src/scss/dublin.scss
+++ b/src/scss/dublin.scss
@@ -8,6 +8,7 @@
 @import "./footer";
 @import "./blog";
 @import "./singular";
+@import "./sidebar";
 
 /* Import all component styles */
 @import "./components/components";
