adding new fonts and colours

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -232,7 +232,8 @@ header#masthead {
 				a:focus-within,
 				a:active,
 				a:hover {
-					background: $lightBlue;
+          background: $white;
+          color: $primaryColour;
         }
 
 
