--- a/src/scss/dublin.scss
+++ b/src/scss/dublin.scss
@@ -10,5 +10,9 @@
 @import "./singular";
 @import "./sidebar";
 
+// home
+@import "./home/boxes";
+
 /* Import all component styles */
 @import "./components/components";
+@import "./components/mainBanner";
