--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,6 +1,6 @@
 // Fonts
-$bodyFont: 'Arvo', serif;
-$headingFont: 'Open Sans', sans-serif;
+$bodyFont:'Open Sans', sans-serif;
+$headingFont: 'Arvo', serif;
 
 // Colours
 $lightBlue:	#97cade;		//	rgb(151,202,222)
@@ -11,7 +11,7 @@ $brightPurple: #9C0076;		//	rgb(100,24,154)
 $white: #fff;
 
 $textColour: #2c3039;
-$backgroudColour: #f9f9f9;
+$backgroudColour: #EEEEEE;
 
 $primaryColour: $medBlue;
 $secondaryColour: $white;
