--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,7 +1,11 @@
 .site-footer {
-	background: $lightBlue;
-  padding: 1em;
+	background: $primaryColour;
+  padding: 1em 1em 20em 1em;
   margin-top: 4em;
+  color: $white;
+  background-image: url(https://2019.dublin.wordcamp.org/files/2019/07/lines_dublin.jpg);
+  background-repeat: no-repeat;
+  background-position: bottom center;
 
 	#footer-widgets {
 		width: 100%;
@@ -14,7 +18,7 @@
   }
 
   a {
-    color: $primaryColour;
+    color: $white;
     text-decoration: none;
 
     &:hover {
