--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,47 +1,79 @@
-header#masthead {
-	background: $primaryColour;
-	display: flex;
-	position: sticky;
-	top: 0;
-	right: 0;
-	left: 0;
-	z-index: 5;
+.site-header {
+  background: $primaryColour;
+  display: flex;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 5;
   color: $white;
-  padding: 0 2rem;
+  flex-wrap: wrap;
+  position: relative;
 
-	.site-branding {
-    text-align: left;
-		position: relative;
-		padding: 1.5em 0 0;
+  .site-branding {
+    position: relative;
+    padding: 1.5em 0 0;
 
-		.site-title {
-			color: $white;
-			font-size: 2rem;
-      margin: 0 auto;
+    .site-title {
       padding: 0;
 
-			a {
+      a {
+        background: url("https://2019.dublin.wordcamp.org/files/2019/07/WordCamp-Dublin-2.png");
+        background-repeat: no-repeat;
         text-decoration: none;
-				color: $white;
-			}
-		}
+        width: 557px;
+        margin: 3em auto;
+        height: 130px;
+        display: block;
+        overflow: hidden;
+        text-indent: -9999px;
+        color: $white;
+      }
+    }
 
-		.site-description {
-			display: none;
-		}
+    .site-description {
+      font-family: $headingFont;
+      font-size: 2em;
+      text-align: center;
+    }
   }
 
   .menu-menu-container {
+    width: 73rem;
     max-width: 100%;
     margin: 0 auto;
     text-align: right;
+    position: relative;
+
+    &:before {
+      content: "#WCDUBLIN";
+      font-size: 2rem;
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+    }
   }
 
   .custom-header {
-    height: 100%;
+    height: 470px;
+    width: 100%;
     max-width: 100%;
+    background-color: $primaryColour;
+    background-image: url("https://2019.dublin.wordcamp.org/files/2019/07/wordcamp_banner_image.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    order: 2;
   }
 
+  .main-navigation {
+    position: sticky;
+    order: 1;
+    top: 0;
+    right: 0;
+    left: 0;
+    background: $primaryColour;
+  }
 }
 
 @media screen and (max-width: 63.99rem) {
@@ -54,214 +86,206 @@ header#masthead {
     }
   }
 
-	.page-navigation-container {
-		font-family: $headingFont;
+  .page-navigation-container {
+    font-family: $headingFont;
 
-		.menu-toggle {
-			margin: 1rem auto;
-			padding: 1rem 0;
-			width: 100%;
-			border: none;
-			border-top: 3px solid $lightBlue;
+    .menu-toggle {
+      margin: 1rem auto;
+      padding: 1rem 0;
+      width: 100%;
+      border: none;
+      border-top: 3px solid $lightBlue;
       border-bottom: 3px solid $lightBlue;
       border-radius: 0;
-			background: transparent;
-			color: $white;
-			font-size: 1.2rem;
-			font-weight: 700;
-		}
+      background: transparent;
+      color: $white;
+      font-size: 1.2rem;
+      font-weight: 700;
+    }
 
-		ul {
-			display: none;
-		}
+    ul {
+      display: none;
+    }
 
-		ul li {
-			display: block;
-			float: none;
-			text-align: left;
-			position: relative;
+    ul li {
+      display: block;
+      float: none;
+      text-align: left;
+      position: relative;
 
-			button.dropdown-toggle {
-				display: none;
-			}
+      button.dropdown-toggle {
+        display: none;
+      }
 
-			a {
-				display: block;
-				color: $lightBlue;
+      a {
+        display: block;
+        color: $lightBlue;
         padding: 1rem 0.5rem;
         width: 100%;
 
         &:hover,
         &:active {
-					color: $white;
-					background: $lightBlue;
-				}
-			}
+          color: $white;
+          background: $lightBlue;
+        }
+      }
 
-			ul.sub-menu {
-				box-shadow: none;
-				position: relative;
-				left: 0;
-				float: none;
-				display: block;
-				top: 0;
+      ul.sub-menu {
+        box-shadow: none;
+        position: relative;
+        left: 0;
+        float: none;
+        display: block;
+        top: 0;
 
-				li a {
-          margin: .5rem 0 .5rem 0;
+        li a {
+          margin: 0.5rem 0 0.5rem 0;
           padding-left: 1.5rem;
-				}
-			}
+        }
+      }
 
-			ul.sub-menu ul.sub-menu {
-				padding-left: 2rem;
-			}
-		}
+      ul.sub-menu ul.sub-menu {
+        padding-left: 2rem;
+      }
+    }
   }
 
-	.page-navigation-container.toggled-on ul {
-		display: block;
-	}
+  .page-navigation-container.toggled-on ul {
+    display: block;
+  }
 
-	nav#site-navigation.page-navigation-container.toggled-on .menu-menu-container {
-	  display: block;
-	}
+  #site-navigation.page-navigation-container.toggled-on .menu-menu-container {
+    display: block;
+  }
 
-	.js .menu-toggle,
-	.js .dropdown-toggle {
-		display: block;
+  .js .menu-toggle,
+  .js .dropdown-toggle {
+    display: block;
   }
 }
 
 @media screen and (min-width: 64rem) {
   .menu-menu-1-container ul#primary-menu.menu {
-		display: inline-block;
-		margin: 0 auto -.4rem auto;
+    display: inline-block;
+    margin: 0 auto -0.4rem auto;
 
-		li {
-			padding: 0;
-			margin: 0;
+    li {
+      padding: 0;
+      margin: 0;
 
-			a {
-				color: $lightBlue;
-				padding: .75rem 1.5rem;
-				margin: 0 1rem 0 1rem;
-				text-transform: uppercase;
-			}
+      a {
+        color: $lightBlue;
+        padding: 0.75rem 1.5rem;
+        margin: 0 1rem 0 1rem;
+        text-transform: uppercase;
+      }
 
-			a:hover,
-			a:focus,
-			a:active,
-			a:focus-within {
-				background: $lightBlue;
-				color: $white;
-			}
-		}
+      a:hover,
+      a:focus,
+      a:active,
+      a:focus-within {
+        background: $lightBlue;
+        color: $white;
+      }
+    }
 
-		li:hover > a {
-			background: $lightBlue;
-			color: $white;
-		}
+    li:hover > a {
+      background: $lightBlue;
+      color: $white;
+    }
 
-		ul.sub-menu {
-			text-align: left;
-			margin: 1.5rem 0 0 1rem;
-			background: $primaryColour;
+    ul.sub-menu {
+      text-align: left;
+      margin: 1.5rem 0 0 1rem;
+      background: $primaryColour;
 
-			li {
-				padding: 0;
-				margin: 0;
+      li {
+        padding: 0;
+        margin: 0;
 
-				a {
-					color: $lightBlue;
-					padding: .75rem .5rem;
-					margin: 0 0;
-				}
+        a {
+          color: $lightBlue;
+          padding: 0.75rem 0.5rem;
+          margin: 0 0;
+        }
 
-				a:hover {
-					color: $white;
-					background: $lightBlue;
-				}
+        a:hover {
+          color: $white;
+          background: $lightBlue;
+        }
 
-				ul.sub-menu {
-					margin: 0;
-				}
-			}
-		}
+        ul.sub-menu {
+          margin: 0;
+        }
+      }
+    }
   }
 
-  header#masthead {
-		.site-branding p.site-title {
-			text-align: left;
-		}
+  #masthead {
+    .site-branding .site-title {
+      text-align: left;
+    }
 
-		.site-branding p.site-description {
-			text-align: right;
-		}
+    #site-navigation {
+      display: block;
+      margin: 0 auto;
+      text-align: center;
+      font-family: $headingFont;
+      z-index: 4;
 
-		#site-navigation {
-			position: relative;
-			display: block;
-			margin: 0 auto;
-			text-align: center;
-			font-family: $headingFont;
-			top: 0;
-			z-index: 4;
-			background: rgba(29,10,105,0);
+      #primary-menu {
+        margin: 0 auto;
+        display: inline-flex;
+        text-align: left;
 
-			#primary-menu {
-				margin: 0 auto;
-				display: inline-flex;
-				text-align: left;
+        li {
+          padding: 0;
+          text-transform: uppercase;
+          font-weight: 700;
+          display: flex;
+          align-items: center;
+        }
 
-				li {
-					padding: 0;
-					text-transform: uppercase;
-					font-weight: 700;
-					display: flex;
-					align-items: center;
-				}
-
-				a {
-					color: $white;
-					padding: 2rem 1rem;
-					height: 90px;
+        a {
+          color: $white;
+          padding: 2rem 1rem;
+          height: 90px;
           font-size: 1rem;
-				}
+        }
 
-				a:focus,
-				a:focus-within,
-				a:active,
-				a:hover {
+        a:focus,
+        a:focus-within,
+        a:active,
+        a:hover {
           background: $white;
           color: $primaryColour;
         }
-
 
         .current-menu-item a {
           background: $lightBlue;
         }
 
-				ul.sub-menu {
-					background: $primaryColour;
-					margin: 4rem 0 0 0;
+        ul.sub-menu {
+          background: $primaryColour;
+          margin: 4rem 0 0 0;
 
-					li {
+          li {
             margin: 0;
             padding: 0;
 
-						a {
-							padding: 1rem;
+            a {
+              padding: 1rem;
               min-width: 260px;
-							margin: 0 0;
-							height: auto;
-						}
-					}
+              margin: 0 0;
+              height: auto;
+            }
+          }
 
-					ul.sub-menu {
-						margin-top: 0;
-					}
-				}
-			}
-		}
+          ul.sub-menu {
+            margin-top: 0;
+          }
+        }
+      }
+    }
   }
 }
