--- a/src/scss/home/_boxes.scss
+++ b/src/scss/home/_boxes.scss
@@ -11,6 +11,8 @@
 
   &__title {
     &:before {
+      background-repeat: no-repeat;
+      background-size: contain;
       display: block;
       margin: 0.7em auto;
       width: 50px;
@@ -19,15 +21,15 @@
     }
 
     &__volunteers:before {
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 59.1 59.1'%3E%3Cpath d='M52.8 27.1a2.3 2.3 0 0 0-2-1.1 10 10 0 0 0-5.2 1.7c-1.5 1-3.6 2.8-5.3 5.9-.4.6-1 1-1.5 1v-.4V11a4 4 0 0 0-8 0v15.5c0 .3-.2.5-.5.5s-.5-.2-.5-.5V4a4 4 0 0 0-8 0v22.5c0 .3-.2.5-.5.5s-.5-.2-.5-.5v-18a3.5 3.5 0 0 0-7 0v20c0 .3-.2.5-.5.5s-.5-.2-.5-.5V16a3.5 3.5 0 0 0-7 0v27.2c1 14 9.5 15.9 17.8 15.9 6.8 0 13-3.4 16-8.9a632.7 632.7 0 0 1 8.9-14c.8-1.6 1.8-2.9 2.7-3.7 1-.7 1.4-1.6 1.9-2.4.2-.4.4-2-.3-3zm-1.5 2.2c-.4.7-.8 1.3-1.3 1.7-1.2 1-2.3 2.4-3.3 4.3a471.8 471.8 0 0 1-8.8 14A16.2 16.2 0 0 1 23.6 57C13.1 57 8.5 53 7.8 43V16a1.5 1.5 0 0 1 3 0v12.5a2.5 2.5 0 0 0 5 0v-20a1.5 1.5 0 0 1 3 0v18a2.5 2.5 0 0 0 5 0V4a2 2 0 0 1 4 0v22.5a2.5 2.5 0 0 0 5 0V11a2 2 0 0 1 4 0v23.2c0 1 0 1.6.5 2 .4.4 1 .5 1.3.5a4 4 0 0 0 3.4-2.1c1.6-2.8 3.4-4.4 4.7-5.2a8 8 0 0 1 4.1-1.4l.3.1c.2.3.2.9.2 1.2z'/%3E%3C/svg%3E");
+      background-image: url("https://2019.dublin.wordcamp.org/files/2019/07/volunteer-small.png");
     }
 
     &__speakers:before {
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 60 60'%3E%3Cpath d='M55.5 46.5l-9.8-4.2a2 2 0 0 1-.7-.8h6.6s2.8.3 5-.6a3 3 0 0 0 1.2-4.4 33.1 33.1 0 0 1-6.4-16.7c0-.1-.4-12-12.2-12.2a14 14 0 0 0-4.8.9c-.3-.8-.8-1.7-1.5-2.5-2-2.3-5.4-3.5-9.9-3.5S15.1 3.7 13 6a9 9 0 0 0-2 6.6v5.3a4 4 0 0 0-1 2.6v4a4 4 0 0 0 1.5 3.1 21 21 0 0 0 3.5 7.2v3.4c0 1-.5 1.8-1.4 2.3l-8.9 4.8a9 9 0 0 0-4.7 8v4.2h60v-3.7a8 8 0 0 0-4.5-7.3zm-11.5 9H2v-2.2A7 7 0 0 1 5.7 47l8.9-4.9a4.6 4.6 0 0 0 2.4-4v-4l-.2-.3s-2.5-3-3.4-7.1l-.1-.4-.4-.2a2 2 0 0 1-.9-1.7v-4c0-.6.2-1 .7-1.5l.3-.3v-6.3s-.4-2.8 1.6-5c1.7-2 4.5-2.9 8.4-2.9 3.9 0 6.7 1 8.4 2.8a6.5 6.5 0 0 1 1.5 3.1v.2a12.8 12.8 0 0 1 .1.8 9.4 9.4 0 0 1 0 .6v6.7l.3.3c.5.4.7 1 .7 1.5v4a2 2 0 0 1-1.4 1.9l-.5.2-.2.4a21 21 0 0 1-3.7 6.8l-.2.3V39l.1.1a4.7 4.7 0 0 0 .5 1.4l.5.8.2.2c.4.4.8.7 1.3.9l9.5 4.8a7 7 0 0 1 3.9 6.3v2zm14 0H46v-2a9 9 0 0 0-5-8.1L34.2 42v-1.3c-.2-.7-.9-1.2-1.6-1.2h-2.2l-.2-.2-.1-.4-.1-.7V35l.7-1c1.3-1.7 2.3-3.7 3-5.8a4 4 0 0 0 2.3-3.6v-4a4 4 0 0 0-1-2.6v-5.3-2.2a12 12 0 0 1 4.2-.8c9.8.1 10.2 9.8 10.2 10.3.2 7.5 4.8 14.9 6.7 17.7a1 1 0 0 1-.4 1.4c-1.6.8-4 .6-4 .5h-7a1.8 1.8 0 0 0-1.6 2.7c.3.6.9 1.5 1.8 2l9.7 4.2a6 6 0 0 1 3.4 5.4v1.7z'/%3E%3C/svg%3E");
+      background-image: url("https://2019.dublin.wordcamp.org/files/2019/07/speakers.png");
     }
 
     &__ticket:before {
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 60 60'%3E%3Cpath d='M47 4H35l1.8-2.4A1 1 0 1 0 35.2.4L32.5 4h-4.9L26 .6a1 1 0 0 0-1.8.8L25.4 4H13a3 3 0 0 0-3 3v50a3 3 0 0 0 3 3h34a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm1 53c0 .6-.4 1-1 1H13a1 1 0 0 1-1-1V7c0-.6.4-1 1-1h13.4l1 2a4 4 0 0 0 2.6 7 4 4 0 1 0-.8-8l-.6-1H47c.6 0 1 .4 1 1v50zM28.3 9.9l.8 1.5a1 1 0 0 0 1.8-.8L30 9a2 2 0 1 1-1.8.9z'/%3E%3Cpath d='M30 23a13 13 0 0 0-11.1 19.7h-.1l.8 1.1.9 1 .2.2 1 1 1.1.8.6.4.6.3a12.6 12.6 0 0 0 2.6 1l.6.2.8.1.6.1 1.4.1h1.4l.6-.2.8-.1.6-.2a13 13 0 0 0 2.6-1l.6-.3.6-.4 1-.8h.2l1-1 .1-.2.8-1 1-1.1H41A13 13 0 0 0 30 23zm-3 17.6a4 4 0 0 1-1-2.6v-4a4 4 0 0 1 8 0v4a4 4 0 0 1-1 2.6l-1 1.1 5.9 2-.7.6-.2.1-.5.4-.4.3a11 11 0 0 1-12.2 0c-.2 0-.3-.2-.4-.3l-.5-.4h-.2a11 11 0 0 1-.7-.7l5.8-2-1-1zM39.2 42l-3.9-1.3A6 6 0 0 0 36 38v-4a6 6 0 0 0-12 0v4c0 1 .2 1.9.7 2.7L20.8 42a11 11 0 1 1 18.4 0z'/%3E%3Ccircle cx='45.2' cy='19' r='1'/%3E%3Ccircle cx='26.2' cy='19' r='1'/%3E%3Ccircle cx='18.6' cy='19' r='1'/%3E%3Ccircle cx='14.8' cy='19' r='1'/%3E%3Ccircle cx='22.4' cy='19' r='1'/%3E%3Ccircle cx='30' cy='19' r='1'/%3E%3Ccircle cx='41.4' cy='19' r='1'/%3E%3Ccircle cx='37.6' cy='19' r='1'/%3E%3Ccircle cx='33.8' cy='19' r='1'/%3E%3Ccircle cx='14.8' cy='54' r='1'/%3E%3Ccircle cx='22.4' cy='54' r='1'/%3E%3Ccircle cx='41.4' cy='54' r='1'/%3E%3Ccircle cx='37.6' cy='54' r='1'/%3E%3Ccircle cx='45.2' cy='54' r='1'/%3E%3Ccircle cx='30' cy='54' r='1'/%3E%3Ccircle cx='26.2' cy='54' r='1'/%3E%3Ccircle cx='33.8' cy='54' r='1'/%3E%3Ccircle cx='18.6' cy='54' r='1'/%3E%3C/svg%3E");
+      background-image: url("https://2019.dublin.wordcamp.org/files/2019/07/tickets.png");
     }
   }
 }
