--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -9,9 +9,10 @@ $darkBlue: #1d0a69;		//	rgb(29,10,105)
 $darkPurple: #6E1799;		//	rgb(61,4,102)
 $brightPurple: #9C0076;		//	rgb(100,24,154)
 $white: #fff;
+$borderColour: #ddd;
 
 $textColour: #2c3039;
-$backgroudColour: #EEEEEE;
+$backgroudColour: $white;
 
 $primaryColour: $medBlue;
 $secondaryColour: $white;
