--- a/src/scss/home/_boxes.scss
+++ b/src/scss/home/_boxes.scss
@@ -1,12 +1,14 @@
 .boxes {
   &.wp-block-columns {
     background: $backgroudColour;
+    margin-top: 2rem;
   }
 
   .wp-block-column {
     background: $white;
     text-align: center;
     padding: 0.5em;
+    border: 1px solid $borderColour;
   }
 
   &__title {
