--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,11 +1,21 @@
 .site-footer {
-	background: $primaryColour;
-  padding: 1em 1em 20em 1em;
+  position: relative;
+  padding: 1em 1em 220px 1em;
   margin-top: 4em;
-  color: $white;
-  background-image: url(https://2019.dublin.wordcamp.org/files/2019/07/lines_dublin.jpg);
-  background-repeat: no-repeat;
   background-position: bottom center;
+
+  &:before {
+    background: $primaryColour;
+    background-image: url(https://2019.dublin.wordcamp.org/files/2019/07/lines_dublin.jpg);
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 220px;
+  }
 
 	#footer-widgets {
 		width: 100%;
