--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -15,6 +15,7 @@
     left: 0;
     width: 100%;
     height: 220px;
+    margin-top: 20px;
   }
 
 	#footer-widgets {
@@ -28,10 +29,11 @@
   }
 
   a {
-    color: $white;
+    color: $primaryColour;
     text-decoration: none;
 
     &:hover {
+      color: $primaryColour;
       text-decoration: underline;
     }
   }
