Implement general improvements

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -195,18 +195,23 @@
     display: block;
   }
 }
+.menu-menu-container {
+  &:before {
+    content: "#WCDUBLIN";
+    font-size: 1.5rem;
+    position: absolute;
+    left: 1rem;
+    top: -35px;
+    transform: translateY(-50%);
 
-@media screen and (min-width: 64rem) {
-  .menu-menu-container {
-    &:before {
-      content: "#WCDUBLIN";
-      font-size: 2rem;
-      position: absolute;
-      left: 0;
-      top: 50%;
-      transform: translateY(-50%);
+    @media screen and (min-width: 64rem) {
+    font-size: 2rem;
+    top: 50%;
     }
   }
+}
+
+@media screen and (min-width: 64rem) {
   .menu-menu-1-container ul#primary-menu.menu {
     display: inline-block;
     margin: 0 auto -0.4rem auto;
