--- a/src/scss/_singular.scss
+++ b/src/scss/_singular.scss
@@ -21,18 +21,18 @@
       margin: 0 auto;
     }
 
-    .content-area,
-    .widget-area {
-      float: left;
-    }
+    // .content-area,
+    // .widget-area {
+    //   float: left;
+    // }
 
-    .content-area {
-      width: 66%;
-    }
+    // .content-area {
+    //   width: 66%;
+    // }
 
-    .widget-area {
-      width: 33%;
-      margin-top: 2em;
-    }
+    // .widget-area {
+    //   width: 33%;
+    //   margin-top: 2em;
+    // }
   }
 }
