--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -245,3 +245,16 @@ p.no-comments {
 		}
 	}
 }
+
+ul {
+  list-style: none;
+}
+
+ul li::before {
+  content: "\2022";
+  color: $medBlue;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
