--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -36,6 +36,19 @@
       text-decoration: underline;
     }
   }
+
+  h4 {
+    font-size: 1.25rem;
+  }
+}
+
+@media screen and (min-width: 30rem) {
+  .sponsor-level:not(.venue-sponsor) {
+    a {
+      width: 50%;
+      float: left;
+    }
+  }
 }
 
 @media screen and (min-width: 64rem) {
