--- a/src/scss/components/_subscribe_news.scss
+++ b/src/scss/components/_subscribe_news.scss
@@ -1,6 +1,6 @@
 .wp-block-jetpack-subscriptions {
   button {
-    background: #163180;
+    background: $medBlue;
     color: #fff;
   	font-size: 1em;
   }
