--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -250,7 +250,7 @@ ul {
   list-style: none;
 }
 
-ul li::before {
+ul:not(.menu) li::before {
   content: "\2022";
   color: $medBlue;
   font-weight: bold;
