--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -43,11 +43,14 @@
 }
 
 @media screen and (min-width: 30rem) {
-  .sponsor-level:not(.venue-sponsor) {
-    a {
-      width: 50%;
-      float: left;
-    }
+  .sponsor-level.platinum a {
+    width: 50%;
+    float: left;
+  }
+
+  .sponsor-level.gold a {
+    width: 33%;
+    float: left;
   }
 }
 
