--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -258,3 +258,35 @@ ul:not(.menu) li::before {
   width: 1em;
   margin-left: -1em;
 }
+
+@media screen and (min-width: 64rem) {
+  .wp-block-image figure {
+    &.alignleft,
+    &.alignright {
+      width: 115%;
+      height: auto;
+    }
+
+    &.alignleft {
+      margin-left: -60px;
+    }
+
+    &.alignright {
+      margin-right: -60px;
+    }
+  }
+
+  .wp-block-image {
+    &.alignfull,
+    &.alignwide {
+      margin: 0;
+      padding: 0;
+
+        img {
+        max-width: 100vw;
+        width: 100vw;
+        height: auto;
+      }
+    }
+  }
+}
