--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -72,7 +72,7 @@
 		.sponsor-level.paper a.sponsor-logo,
 		.sponsor-level.tissue a.sponsor-logo {
 			display: inline-block;
-			padding: 0 1rem;
+      padding: 1rem;
 		}
 
 		.sponsor-level.gold a.sponsor-logo img,
