--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -43,6 +43,10 @@
 }
 
 @media screen and (min-width: 30rem) {
+  .sponsor-logo {
+    padding: 1rem;
+  }
+
   .sponsor-level.platinum a {
     width: 50%;
     float: left;
