Change a color of the table block heading (attempt 2)

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -69,11 +69,11 @@ a:visited {
       padding-bottom: 1em;
 
       &:first-child {
-        background: #1d5cb5;
+        background: $medBlue;
         color: #fff;
       }
 
-      &:nth-child(odd) {
+      &:nth-child(even) {
         background: $lightBlue;
         color: $white;
         a {
